--- a/docs/coco-doc/Makefile
+++ b/docs/coco-doc/Makefile
@@ -8,6 +8,7 @@ PAPER         =
 BUILDDIR      = build
 HTMLBUILDDIR  = ../../../coco-doc/
 PDF           = coco-doc.pdf
+TEX           = coco-doc.tex
 
 # User-friendly check for sphinx-build
 ifeq ($(shell which $(SPHINXBUILD) >/dev/null 2>&1; echo $$?), 1)
@@ -129,9 +130,14 @@ latex:
 	      "(use \`make latexpdf' here to do that automatically)."
 
 latexpdf:
+	../replace.py ".. CHAPTERTITLE"      CHAPTERTITLE source/index.rst
+	../replace.py ".. CHAPTERUNDERLINE" "^^^^^^^^^^^^" source/index.rst
 	$(SPHINXBUILD) -b latex $(ALLSPHINXOPTS) $(BUILDDIR)/latex
+	../replace.py  CHAPTERTITLE  ".. CHAPTERTITLE" source/index.rst
+	../replace.py "^^^^^^^^^^^^" ".. CHAPTERUNDERLINE" source/index.rst
 	@echo "Running LaTeX files through pdflatex..."
 	$(MAKE) -C $(BUILDDIR)/latex all-pdf
+	../swap-abstract-and-toc.py $(BUILDDIR)/latex/$(TEX)
 	cp $(BUILDDIR)/latex/$(PDF) ../../$(PDF)
 	@echo "pdflatex finished; see ../../$(PDF)."
 		
