--- a/docs/bbob-biobj/functions/Makefile
+++ b/docs/bbob-biobj/functions/Makefile
@@ -8,6 +8,7 @@ PAPER         =
 BUILDDIR      = build
 HTMLBUILDDIR  = ../../../../coco-doc/bbob-biobj/functions
 PDF           = bbob-biobj-functions.pdf
+TEX           = bbob-biobj-functions.tex
 
 # User-friendly check for sphinx-build
 ifeq ($(shell which $(SPHINXBUILD) >/dev/null 2>&1; echo $$?), 1)
@@ -129,11 +130,16 @@ latex:
 	      "(use \`make latexpdf' here to do that automatically)."
 
 latexpdf:
+	python ../../replace.py ".. CHAPTERTITLE"     "CHAPTERTITLE" source/index.rst
+	python ../../replace.py ".. CHAPTERUNDERLINE" "%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%" source/index.rst
 	$(SPHINXBUILD) -b latex $(ALLSPHINXOPTS) $(BUILDDIR)/latex
+	python ../../replace.py "CHAPTERTITLE" ".. CHAPTERTITLE" source/index.rst
+	python ../../replace.py "%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%" ".. CHAPTERUNDERLINE" source/index.rst
 	@echo "Running LaTeX files through pdflatex..."
 	$(MAKE) -C $(BUILDDIR)/latex all-pdf
+	python ../../swap-abstract-and-toc.py $(BUILDDIR)/latex/$(TEX)
 	cp $(BUILDDIR)/latex/$(PDF) ../../$(PDF)
-	@echo "pdflatex finished; see ../../$(PDF)."
+	@echo "pdflatex finished; see ../../$(PDF)"
 
 latexpdfja:
 	$(SPHINXBUILD) -b latex $(ALLSPHINXOPTS) $(BUILDDIR)/latex
