--- a/docs/coco-doc/Makefile
+++ b/docs/coco-doc/Makefile
@@ -130,11 +130,11 @@ latex:
 	      "(use \`make latexpdf' here to do that automatically)."
 
 latexpdf:
-	python ../replace.py ".. CHAPTERTITLE" "CHAPTERTITLE" source/index.rst
-	python ../replace.py ".. ^^^^^^^^^^^^" "^^^^^^^^^^^^" source/index.rst
+	python ../replace.py ".. CHAPTERTITLE"     "CHAPTERTITLE" source/index.rst
+	python ../replace.py ".. CHAPTERUNDERLINE" "?????????????????????????????????????????????????????????????????????????" source/index.rst
 	$(SPHINXBUILD) -b latex $(ALLSPHINXOPTS) $(BUILDDIR)/latex
 	python ../replace.py "CHAPTERTITLE" ".. CHAPTERTITLE" source/index.rst
-	python ../replace.py "^^^^^^^^^^^^" ".. ^^^^^^^^^^^^" source/index.rst
+	python ../replace.py "?????????????????????????????????????????????????????????????????????????" ".. CHAPTERUNDERLINE" source/index.rst
 	@echo "Running LaTeX files through pdflatex..."
 	$(MAKE) -C $(BUILDDIR)/latex all-pdf
 	python ../swap-abstract-and-toc.py $(BUILDDIR)/latex/$(TEX)
