--- a/docs/coco-generic/coco-experimental-setup/Makefile
+++ b/docs/coco-generic/coco-experimental-setup/Makefile
@@ -131,10 +131,10 @@ latex:
 
 latexpdf:
 	python ../../replace.py ".. CHAPTERTITLE" "CHAPTERTITLE" source/index.rst
-	python ../../replace.py ".. ^^^^^^^^^^^^" "^^^^^^^^^^^^" source/index.rst
+	python ../../replace.py ".. CHAPTERUNDERLINE" "?????????????????????????????????????????????????????????????????????????" source/index.rst
 	$(SPHINXBUILD) -b latex $(ALLSPHINXOPTS) $(BUILDDIR)/latex
 	python ../../replace.py "CHAPTERTITLE" ".. CHAPTERTITLE" source/index.rst
-	python ../../replace.py "^^^^^^^^^^^^" ".. ^^^^^^^^^^^^" source/index.rst
+	python ../../replace.py "?????????????????????????????????????????????????????????????????????????" ".. CHAPTERUNDERLINE" source/index.rst
 	@echo "Running LaTeX files through pdflatex..."
 	$(MAKE) -C $(BUILDDIR)/latex all-pdf
 	python ../../swap-abstract-and-toc.py $(BUILDDIR)/latex/$(TEX)
