--- a/docs/bbob-biobj/perf-assessment/Makefile
+++ b/docs/bbob-biobj/perf-assessment/Makefile
@@ -130,10 +130,10 @@ latex:
 	      "(use \`make latexpdf' here to do that automatically)."
 
 latexpdf:
-	python ../../replace.py ".. CHAPTERTITLE" "CHAPTERTITLE" source/index.rst
+	python ../../replace.py ".. FAKECHAPTERTITLE" "FAKECHAPTERTITLE" source/index.rst
 	python ../../replace.py ".. CHAPTERUNDERLINE" "?????????????????????????????????????????????????????????????????????????" source/index.rst
 	$(SPHINXBUILD) -b latex $(ALLSPHINXOPTS) $(BUILDDIR)/latex
-	python ../../replace.py "CHAPTERTITLE" ".. CHAPTERTITLE" source/index.rst
+	python ../../replace.py "FAKECHAPTERTITLE" ".. FAKECHAPTERTITLE" source/index.rst
 	python ../../replace.py "?????????????????????????????????????????????????????????????????????????" ".. CHAPTERUNDERLINE" source/index.rst
 	@echo "Running LaTeX files through pdflatex..."
 	$(MAKE) -C $(BUILDDIR)/latex all-pdf
