--- a/docs/coco-generic/coco-perf-assessment/Makefile
+++ b/docs/coco-generic/coco-perf-assessment/Makefile
@@ -130,11 +130,12 @@ latex:
 	      "(use \`make latexpdf' here to do that automatically)."
 
 latexpdf:
+	cp source/index.rst index-backup.txt 
 	python ../../replace.py ".. CHAPTERTITLE" "CHAPTERTITLE" source/index.rst
 	python ../../replace.py ".. CHAPTERUNDERLINE" "?????????????????????????????????????????????????????????????????????????" source/index.rst
 	$(SPHINXBUILD) -b latex $(ALLSPHINXOPTS) $(BUILDDIR)/latex
-	python ../../replace.py "CHAPTERTITLE" ".. CHAPTERTITLE" source/index.rst
-	python ../../replace.py "?????????????????????????????????????????????????????????????????????????" ".. CHAPTERUNDERLINE" source/index.rst
+	cp index-backup.txt source/index.rst  # mv does not work
+	rm index-backup.txt
 	@echo "Running LaTeX files through pdflatex..."
 	$(MAKE) -C $(BUILDDIR)/latex all-pdf
 	python ../../swap-abstract-and-toc.py $(BUILDDIR)/latex/$(TEX)
