added ACM-Reference-Format.bst file that caused the postprocessing test to fail with BibTeX (which now can be incommented again)

--- a/code-postprocessing/setup.py.in
+++ b/code-postprocessing/setup.py.in
@@ -28,6 +28,7 @@ setup(
                           '../latex-templates/*.cls',
                           '../latex-templates/*.sty',
                           '../latex-templates/*.bib',
+                          '../latex-templates/*.bst',
                           'data/IPOP-CMA-ES.tgz',
                           'data/MCS.tgz'
                           ]},
