--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,7 +48,7 @@ references:
       name: Run Python 3 coco tests on Ubuntu.
       command: |
         apt-get install -y git cython3
-        python do.py test-python3
+        python do.py test-python
 
   test_ubuntu_other: &test_ubuntu_other
     run:
