try to solve windows issue with CI

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,7 +12,7 @@ environment:
 init:
   - cmd: "ECHO %PYTHON_VERSION% %MINICONDA%"
   - cmd: "set PATH=%MINICONDA%;%MINICONDA%\\Scripts;%PATH%"
-  - cmd: "set PATH=%CYGWIN%;%PATH%"
+  - cmd: "set PATH=%CYGWIN%;%CYGWIN%\\bin;%PATH%"
 
 install:
   - cmd: conda install -y matplotlib numpy scipy setuptools six pytest
