Revert "Updated CircleCI's configuration"
This reverts commit 0e96ab5704229e0b74bfef132beba54d8bb4f815.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,7 +41,7 @@ references:
       name: Run Python 2 coco tests on Ubuntu.
       command: |
         apt-get install -y git cython
-        python do.py test-python
+        python do.py test-python2
 
   test_ubuntu_python3: &test_ubuntu_python3
     run:
