--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,6 +14,7 @@ init:
   - cmd: "set PATH=%MINICONDA%;%MINICONDA%\\Scripts;%PATH%"
   - cmd: "set PATH=%PATH%;%CYGWIN%;%CYGWIN%\\bin"
   - cmd: "set PATH=C:\\Program Files\\MiKTeX 2.9\\miktex\\bin\\x64;%PATH%"
+  - cmd: "choco install scala"
   
 
 install:
@@ -31,6 +32,7 @@ test_script:
   - cmd: python do.py build-python
   - cmd: python do.py test-python
   - cmd: python do.py test-java
+  - cmd: python do.py test-scala
   - cmd: python do.py test-preprocessing
   - cmd: python do.py test-postprocessing
   # - cmd: python do.py test-postprocessing-all
