--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,13 +14,12 @@ init:
   - cmd: "set PATH=%MINICONDA%;%MINICONDA%\\Scripts;%PATH%"
   - cmd: "set PATH=%PATH%;%CYGWIN%;%CYGWIN%\\bin"
   - cmd: "set PATH=C:\\Program Files\\MiKTeX 2.9\\miktex\\bin\\x64;%PATH%"
-  - cmd: "choco install scala"
-  
 
 install:
   - cmd: conda install -y matplotlib numpy scipy setuptools six pytest cython
   - cmd: python do.py run-python
   - cmd: python do.py install-postprocessing
+  - cmd: choco install scala
 
 test_script:
   # run the experiment
