--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,9 +25,9 @@ jobs:
       - run:
           name: Install git with apt-get
           command: apt-get install -y git
-      - run:
-          name: Install tkinter with apt-get
-          command: apt-get install -y python3-tk
+#      - run:
+#          name: Install tkinter with apt-get
+#          command: apt-get install -y python3-tk
       - run:
           name: Install python packages with pip
           command: pip3 install --upgrade matplotlib numpy setuptools \
@@ -110,9 +110,9 @@ jobs:
       - run:
           name: Install git with apt-get
           command: apt-get install -y git
-      - run:
-          name: Install tkinter with apt-get
-          command: apt-get install -y python-tk
+#      - run:
+#          name: Install tkinter with apt-get
+#          command: apt-get install -y python-tk
       - run:
           name: Install python packages with pip
           command: pip install --upgrade matplotlib numpy setuptools \
