--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -152,7 +152,7 @@ jobs:
             apt-get install -y openjdk-8-jdk
             updatedb
       - run:
-          name: Run coco octave tests
+          name: Run coco java tests
           command: python do.py test-java
           no_output_timeout: 1800
       - run:
