circleci: disabled test_ubuntu_latest_python2_cmocka

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -214,4 +214,4 @@ workflows:
     jobs:
       - test_ubuntu_rolling_python3
       - test_ubuntu_latest_python2
-      - test_ubuntu_latest_python2_cmocka
+#      - test_ubuntu_latest_python2_cmocka
