--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -86,6 +86,13 @@ jobs:
           name: Run coco post-processing tests
           command: python3 do.py test-postprocessing
           no_output_timeout: 5400
+      - run:
+          name: Run coco C
+          command: python do.py run-c
+      - run:
+          name: Run coco C tests
+          command: python do.py test-c
+          no_output_timeout: 1800
 
   test_ubuntu_latest_python2:
     docker:
@@ -166,42 +173,9 @@ jobs:
           name: Run coco post-processing tests
           command: python do.py test-postprocessing
           no_output_timeout: 5400
-
-  test_cmocka_ubuntu_latest_python2:
-    docker:
-      - image: ubuntu:latest
-        environment:
-          CC: gcc
-    working_directory: ~/coco
-    steps:
-      - checkout
-      - run:
-          name: Update apt-get
-          command: apt-get update -qy
-      - run:
-          name: Install python-dev with apt-get
-          command: apt-get install -y python-dev
-      - run:
-          name: Install pip with apt-get
-          command: apt-get install -y python-pip
-      - run:
-          name: Install build-essential with apt-get
-          command: apt-get install -y build-essential
-      - run:
-          name: Install git with apt-get
-          command: apt-get install -y git
-      - run:
-          name: Install python packages with pip
-          command: pip install --upgrade numpy setuptools \
-                                         six scipy pytest cython
       - run:
           name: Run coco C
           command: python do.py run-c
-      - run:
-          name: Install cmocka and mlocate for C tests
-          command: |
-            apt-get install -y mlocate libcmocka-dev
-            updatedb
       - run:
           name: Run coco C tests
           command: python do.py test-c
