--- a/code-experiments/test/integration-test/Makefile.in
+++ b/code-experiments/test/integration-test/Makefile.in
@@ -17,7 +17,7 @@ CCFLAGS = -g -ggdb -std=c89 -pedantic -Wall -Wextra -Wstrict-prototypes -Wshadow
 
 ########################################################################
 ## Toplevel targets
-all: test_coco test_instance_extraction test_biobj test_bbob-constrained test_bbob-mixint
+all: test_coco test_instance_extraction test_biobj test_bbob-constrained test_bbob-mixint test_rw-gan
 
 clean:
 	rm -f coco.o  
@@ -26,6 +26,7 @@ clean:
 	rm -f test_biobj.o test_biobj  
 	rm -f test_bbob-constrained.o test_bbob-constrained  
 	rm -f test_bbob-mixint.o test_bbob-mixint  
+	rm -f test_rw-gan.o test_rw-gan  
 
 ########################################################################
 ## Programs
@@ -44,6 +45,9 @@ test_bbob-constrained: test_bbob-constrained.o coco.o
 test_bbob-mixint: test_bbob-mixint.o
 	${CC} ${CCFLAGS} -o test_bbob-mixint test_bbob-mixint.o ${LDFLAGS}  
 
+test_rw-gan: test_rw-gan.o
+	${CC} ${CCFLAGS} -o test_rw-gan test_rw-gan.o ${LDFLAGS}  
+
 ########################################################################
 ## Additional dependencies
 coco.o: coco.h coco.c
@@ -58,3 +62,5 @@ test_bbob-constrained.o: coco.h coco.c test_bbob-constrained.c
 	${CC} -c ${CCFLAGS} -o test_bbob-constrained.o test_bbob-constrained.c
 test_bbob-mixint.o: test_bbob-mixint.c
 	${CC} -c ${CCFLAGS} -o test_bbob-mixint.o test_bbob-mixint.c
+test_rw-gan.o: test_rw-gan.c
+	${CC} -c ${CCFLAGS} -o test_rw-gan.o test_rw-gan.c
