--- a/code-experiments/test/integration-test/Makefile_win_gcc.in
+++ b/code-experiments/test/integration-test/Makefile_win_gcc.in
@@ -15,7 +15,7 @@ CCFLAGS = -g -ggdb -std=c89 -pedantic -Wall -Wextra -Wstrict-prototypes -Wshadow
 
 ########################################################################
 ## Toplevel targets
-all: test_coco test_instance_extraction test_biobj test_bbob-constrained test_bbob-mixint
+all: test_coco test_instance_extraction test_biobj test_bbob-constrained test_bbob-mixint test_rw-gan
 
 clean:
 	IF EXIST "coco.o" DEL /F coco.o
@@ -29,6 +29,8 @@ clean:
 	IF EXIST "test_bbob-constrained.exe" DEL /F test_bbob-constrained.exe
 	IF EXIST  "test_bbob-mixint.o" DEL /F test_bbob-mixint.o
 	IF EXIST  "test_bbob-mixint.exe" DEL /F test_bbob-mixint.exe  
+	IF EXIST  "test_rw-gan.o" DEL /F test_rw-gan.o
+	IF EXIST  "test_rw-gan.exe" DEL /F test_rw-gan.exe  
 
 ########################################################################
 ## Programs
@@ -47,6 +49,9 @@ test_bbob-constrained: test_bbob-constrained.o coco.o
 test_bbob-mixint: test_bbob-mixint.o
 	${CC} ${CCFLAGS} -o test_bbob-mixint test_bbob-mixint.o ${LDFLAGS}  
 
+test_rw-gan: test_rw-gan.o
+	${CC} ${CCFLAGS} -o test_rw-gan test_rw-gan.o ${LDFLAGS}  
+
 ########################################################################
 ## Additional dependencies
 coco.o: coco.h coco.c
@@ -61,3 +66,5 @@ test_bbob-constrained.o: coco.h coco.c test_bbob-constrained.c
 	${CC} -c ${CCFLAGS} -o test_bbob-constrained.o test_bbob-constrained.c
 test_bbob-mixint.o: test_bbob-mixint.c
 	${CC} -c ${CCFLAGS} -o test_bbob-mixint.o test_bbob-mixint.c
+test_rw-gan.o: test_rw-gan.c
+	${CC} -c ${CCFLAGS} -o test_rw-gan.o test_rw-gan.c
