Handling differences in windows/other systems

--- a/code-experiments/rw-problems/rw-gan/executable_template_win.in
+++ b/code-experiments/rw-problems/rw-gan/executable_template_win.in
@@ -1,1 +1,1 @@
-cd ..\\..\\rw-problems\\rw-gan; python rw_gan_evaluate.py <dim> <fun>
+cd ..\\..\\rw-problems\\rw-gan & python rw_gan_evaluate.py <dim> <fun>
