--- a/code-experiments/rw-problems/rw-gan/executable_template.in
+++ b/code-experiments/rw-problems/rw-gan/executable_template.in
@@ -1,1 +1,1 @@
-cd ../../rw-problems/rw-gan/; python rw_gan_evaluate.py <dim> <fun> <inst>
+cd ../../rw-problems/rw-gan/; python rw_gan_evaluate_backup.py <dim> <fun> <inst>
