--- a/code-experiments/test/integration-test/Makefile_win_gcc.in
+++ b/code-experiments/test/integration-test/Makefile_win_gcc.in
@@ -15,7 +15,7 @@ CCFLAGS = -g -ggdb -std=c89 -pedantic -Wall -Wextra -Wstrict-prototypes -Wshadow
 
 ########################################################################
 ## Toplevel targets
-all: test_coco test_instance_extraction test_biobj test_bbob-constrained test_bbob-mixint test_rw-gan
+all: test_coco test_instance_extraction test_biobj test_bbob-constrained test_bbob-mixint test_rw_gan_mario
 
 clean:
 	IF EXIST "coco.o" DEL /F coco.o
@@ -29,8 +29,8 @@ clean:
 	IF EXIST "test_bbob-constrained.exe" DEL /F test_bbob-constrained.exe
 	IF EXIST  "test_bbob-mixint.o" DEL /F test_bbob-mixint.o
 	IF EXIST  "test_bbob-mixint.exe" DEL /F test_bbob-mixint.exe  
-	IF EXIST  "test_rw-gan.o" DEL /F test_rw-gan.o
-	IF EXIST  "test_rw-gan.exe" DEL /F test_rw-gan.exe  
+	IF EXIST  "test_rw_gan_mario.o" DEL /F test_rw_gan_mario.o
+	IF EXIST  "test_rw_gan_mario.exe" DEL /F test_rw_gan_mario.exe  
 
 ########################################################################
 ## Programs
@@ -49,8 +49,8 @@ test_bbob-constrained: test_bbob-constrained.o coco.o
 test_bbob-mixint: test_bbob-mixint.o
 	${CC} ${CCFLAGS} -o test_bbob-mixint test_bbob-mixint.o ${LDFLAGS}  
 
-test_rw-gan: test_rw-gan.o
-	${CC} ${CCFLAGS} -o test_rw-gan test_rw-gan.o ${LDFLAGS}  
+test_rw_gan_mario: test_rw_gan_mario.o
+	${CC} ${CCFLAGS} -o test_rw_gan_mario test_rw_gan_mario.o ${LDFLAGS}  
 
 ########################################################################
 ## Additional dependencies
@@ -66,5 +66,5 @@ test_bbob-constrained.o: coco.h coco.c test_bbob-constrained.c
 	${CC} -c ${CCFLAGS} -o test_bbob-constrained.o test_bbob-constrained.c
 test_bbob-mixint.o: test_bbob-mixint.c
 	${CC} -c ${CCFLAGS} -o test_bbob-mixint.o test_bbob-mixint.c
-test_rw-gan.o: test_rw-gan.c
-	${CC} -c ${CCFLAGS} -o test_rw-gan.o test_rw-gan.c
+test_rw_gan_mario.o: test_rw_gan_mario.c
+	${CC} -c ${CCFLAGS} -o test_rw_gan_mario.o test_rw_gan_mario.c
