--- a/code-experiments/rw-problems/gan-mario/evaluate_function_template_win.in
+++ b/code-experiments/rw-problems/gan-mario/evaluate_function_template_win.in
@@ -1,1 +1,1 @@
-cd ..\\..\\rw-problems\\gan-mario & python rw_gan_evaluate_backup.py <dim> <fun> <inst>
+cd ..\\..\\rw-problems\\gan-mario & python gan_mario_evaluate_backup.py <obj> <dim> <fun> <inst>
