working with python script

--- a/code-experiments/rw-problems/top-trumps/TopTrumps/CMakeLists.txt
+++ b/code-experiments/rw-problems/top-trumps/TopTrumps/CMakeLists.txt
@@ -3,8 +3,8 @@ cmake_minimum_required(VERSION 2.8)
 project(TopTrumps)
 
 # Executable
-add_executable(TopTrumps main.cpp Simulation/Card.cpp Simulation/Deck.cpp Simulation/Agent.cpp Simulation/Game.cpp Simulation/Outcome.cpp utils/hoy.cpp)
-set_property(TARGET TopTrumps PROPERTY CXX_STANDARD 11)
+add_executable(TopTrumpsExec main.cpp Simulation/Card.cpp Simulation/Deck.cpp Simulation/Agent.cpp Simulation/Game.cpp Simulation/Outcome.cpp utils/hoy.cpp)
+set_property(TARGET TopTrumpsExec PROPERTY CXX_STANDARD 11)
 
 #Test Executables
 add_executable(DeckTest tests/DeckTest.cpp Simulation/Card.cpp Simulation/Deck.cpp utils/hoy.cpp)
