--- a/code-experiments/rw-problems/top-trumps/TopTrumps/Makefile_win_gcc.in
+++ b/code-experiments/rw-problems/top-trumps/TopTrumps/Makefile_win_gcc.in
@@ -1,12 +1,27 @@
+LNAME := rw_top_trumps
+ENAME := rw_top_trumps_test
+ifeq ($(OS),Windows_NT)
+    LIBNAME := $(LNAME).dll
+else
+    LIBNAME := lib$(LNAME).so
+endif
+
 CXXFLAGS := -std=c++11
-LDFLAGS += -lm
+WFLAGS := -Wall -Wpedantic
+LDFLAGS += '-Wl,-rpath,$$ORIGIN' -L. -l$(LNAME)
 
 srcfiles := utils/hoy.cpp Simulation/Card.cpp Simulation/Deck.cpp Simulation/Agent.cpp Simulation/Game.cpp Simulation/Outcome.cpp
-mainfiles:= main.cpp tests/DeckTest.cpp tests/AgentTest.cpp tests/GameTest.cpp
 objects  := $(patsubst %.cpp, %.o, $(srcfiles))
+mainfiles:= main.cpp tests/DeckTest.cpp tests/AgentTest.cpp tests/GameTest.cpp
 mains  := $(patsubst %.cpp, %.o, $(mainfiles))
 
-all: TopTrumpsExec DeckTest AgentTest GameTest
+all: $(LNAME) $(ENAME) TopTrumpsExec DeckTest AgentTest GameTest
+
+$(LNAME): $(objects)
+	$(CXX) $(CXXFLAGS) $(WFLAGS) -fpic -shared -o $(LIBNAME) $(LNAME).cpp $(objects)
+
+$(ENAME): $(objects)
+	gcc -std=c89 $(WFLAGS) $(LDFLAGS) -o $(ENAME) $(ENAME).c
 
 TopTrumpsExec: $(objects)
 	$(CXX) $(CXXFLAGS) $(LDFLAGS) -o TopTrumpsExec main.cpp $(objects)
@@ -27,8 +42,11 @@ depend: .depend
 	$(CXX) $(CXXFLAGS) -MM $^>>./.depend;
 
 clean:
-	del $(objects) 2>nul
-	del $(mains) 2>nul
+	del $(objects) $(mains) 2>nul
+	del *.exe 2>nul
+	del $(LIBNAME) 2>nul
+	del $(LNAME) 2>nul
+	del $(ENAME) 2>nul
 
 dist-clean: clean
 	del *~ .depend 2>nul
