added regression test (`do.py test-suites`) to the AppVeyor and CircleCI configuration

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -93,6 +93,10 @@ jobs:
           name: Run coco C tests
           command: python do.py test-c
           no_output_timeout: 1800
+      - run:
+          name: Run regression test
+          command: python do.py test-suites
+          no_output_timeout: 1800
 
   test_ubuntu_latest_python2:
     docker:
@@ -180,6 +184,11 @@ jobs:
           name: Run coco C tests
           command: python do.py test-c
           no_output_timeout: 1800
+      - run:
+          name: Run regression test
+          command: python do.py test-suites
+          no_output_timeout: 1800
+
 
 workflows:
 
