--- a/appveyor.yml
+++ b/appveyor.yml
@@ -33,4 +33,5 @@ test_script:
   - cmd: python do.py test-java
   - cmd: python do.py test-preprocessing
   - cmd: python do.py test-postprocessing
+  - cmd: python do.py test-suites
   # - cmd: python do.py test-postprocessing-all
