--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -63,7 +63,7 @@ jobs:
       - run:
           name: Install octave for octave tests
           command: |
-            apt-get install -y liboctave-dev
+            DEBIAN_FRONTEND=noninteractive apt-get install -y liboctave-dev
             updatedb
       - run:
           name: Run coco octave tests
