run `do.py test-c` on AppVeyor as well (after we have removed cmocka for a while; see also pr #1671)

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -34,4 +34,5 @@ test_script:
   - cmd: python do.py test-preprocessing
   - cmd: python do.py test-postprocessing
   - cmd: python do.py test-suites
+  - cmd: python do.py test-c
   # - cmd: python do.py test-postprocessing-all
