Socket server working on Windows

--- a/code-experiments/rw-problems/toy-socket/makefile
+++ b/code-experiments/rw-problems/toy-socket/makefile
@@ -3,11 +3,14 @@
 ##
 
 CCFLAGS = -g -ggdb -std=c89 -pedantic -Wall -Wextra -Wstrict-prototypes -Wshadow -Wno-sign-compare -Wconversion
+ifeq ($(OS),Windows_NT)
+	LDFLAGS += -lwsock32
+endif
 
 all: socket_server
 
 socket_server: socket_server.c
-	$(CC) ${CCFLAGS} socket_server.c -o socket_server
+	$(CC) ${CCFLAGS} socket_server.c -o socket_server ${LDFLAGS} 
 
 clean:
 	rm -f socket_server
