--- a/code-experiments/test/integration-test/Makefile.in
+++ b/code-experiments/test/integration-test/Makefile.in
@@ -14,6 +14,9 @@
 
 LDFLAGS += -lm
 CCFLAGS = -g -ggdb -std=c89 -pedantic -Wall -Wextra -Wstrict-prototypes -Wshadow -Wno-sign-compare -Wconversion
+ifeq ($(OS),Windows_NT)
+	LDFLAGS += -lwsock32
+endif
 
 ########################################################################
 ## Toplevel targets
