--- a/code-experiments/test/integration-test/Makefile_win_gcc.in
+++ b/code-experiments/test/integration-test/Makefile_win_gcc.in
@@ -12,6 +12,9 @@
 
 LDFLAGS += -lm
 CCFLAGS = -g -ggdb -std=c89 -pedantic -Wall -Wextra -Wstrict-prototypes -Wshadow -Wno-sign-compare -Wconversion
+ifeq ($(OS),Windows_NT)
+	LDFLAGS += -lwsock32
+endif
 
 ########################################################################
 ## Toplevel targets
