--- a/code-experiments/test/unit-test/Makefile.in
+++ b/code-experiments/test/unit-test/Makefile.in
@@ -1,5 +1,8 @@
 LDFLAGS += -L. -lm
 CCFLAGS = -g -ggdb -std=c89 -pedantic -Wall -Wextra -Wstrict-prototypes -Wshadow -Wno-sign-compare -Wconversion 
+ifeq ($(OS),Windows_NT)
+	LDFLAGS += -lwsock32
+endif
 
 ########################################################################
 ## Toplevel targets
