--- a/appveyor.yml
+++ b/appveyor.yml
@@ -18,7 +18,7 @@ init:
 
 install:
   - cmd: conda install -y matplotlib numpy scipy setuptools six pytest cython
-  - cmd: python do.py run-python
+  - cmd: python do.py run-python install-user
   - cmd: python do.py install-postprocessing
 
 test_script:
