changed maintainer to @nikohansen and myself in setup.py.in (was Dejan before)

--- a/code-postprocessing/setup.py.in
+++ b/code-postprocessing/setup.py.in
@@ -32,8 +32,8 @@ setup(
                           ]},
     url = 'https://github.com/numbbo/coco',
     license = 'BSD',
-    maintainer = 'Dejan Tusar',
-    maintainer_email = 'dejan.tusar@inria.fr',
+    maintainer = 'Dimo Brockhoff and Nikolaus Hansen',
+    maintainer_email = 'dimo.brockhoff@inria.fr',
     # author = ['Nikolaus Hansen', 'Raymond Ros', 'Dejan Tusar'],
     description = 'Benchmarking framework for all types of black-box optimization algorithms, postprocessing. ',
     long_description = '...',
