--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -117,7 +117,7 @@ jobs:
           command: apt-get install -y python-dev
       - run:
           name: Install pip with apt-get
-          command: apt-get install -y python-pip
+          command: apt-get update && apt-get install -y python-pip
       - run:
           name: Install build-essential with apt-get
           command: apt-get install -y build-essential
