Added tests in Python 3.7
#1931

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,6 +8,9 @@ environment:
     - PYTHON_VERSION: 3.6
       MINICONDA: C:\Miniconda36
       CYGWIN: C:\cygwin
+    - PYTHON_VERSION: 3.7
+      MINICONDA: C:\Miniconda37
+      CYGWIN: C:\cygwin
 
 init:
   - cmd: "ECHO %PYTHON_VERSION% %MINICONDA%"
