--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,8 +14,11 @@ jobs:
           name: Update apt-get
           command: apt-get update -qy
       - run:
-          name: Set noninteractive frontend for tzdata configuration
-          command: echo 'debconf debconf/frontend select Noninteractive' | debconf-set-selections
+          name: Set time zone
+          command: sudo ln -fs /usr/share/zoneinfo/Europe/Paris /etc/localtime 
+      - run:
+          name: Set noninteractive frontend for time zone configuration
+          command: sudo dpkg-reconfigure -f noninteractive tzdata
       - run:
           name: Install python-dev with apt-get
           command: apt-get install -y python3-dev
