--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,11 +17,8 @@ jobs:
           name: Set time zone
           command: ln -fs /usr/share/zoneinfo/Europe/Paris /etc/localtime 
       - run:
-          name: Set noninteractive frontend for time zone configuration
-          command: dpkg-reconfigure -f noninteractive tzdata
-      - run:
           name: Install python-dev with apt-get
-          command: apt-get install -y python3-dev
+          command: DEBIAN_FRONTEND="noninteractive" apt-get install -y python3-dev
       - run:
           name: Install pip with apt-get
           command: apt-get install -y python3-pip
