--- a/code-preprocessing/archive-update/setup.py.in
+++ b/code-preprocessing/archive-update/setup.py.in
@@ -17,7 +17,8 @@ print('Using Cython to build interface.')
     
 extensions.append(Extension('cocoprep.coco_archive',
                             sources=['interface/coco_archive.pyx', 'interface/coco.c'],
-                            include_dirs=[np.get_include()]))
+                            include_dirs=[np.get_include()], 
+                            define_macros=[('NPY_NO_DEPRECATED_API', 'NPY_1_7_API_VERSION')]))
 
 setup(
     name='cocoprep',
