--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,7 @@ jobs:
           command: ln -fs /usr/share/zoneinfo/Europe/Paris /etc/localtime 
       - run:
           name: Install python-dev with apt-get
-          command: DEBIAN_FRONTEND="noninteractive" apt-get install -y python3-dev
+          command: DEBIAN_FRONTEND=noninteractive apt-get install -y python3-dev
       - run:
           name: Install pip with apt-get
           command: apt-get install -y python3-pip
