--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -97,6 +97,13 @@ jobs:
           command: python do.py test-c
           no_output_timeout: 1800
       - run:
+          name: Run coco Rust
+          command: python do.py run-rust
+      - run:
+          name: Run coco Rust tests
+          command: python do.py test-rust
+          no_output_timeout: 1800
+      - run:
           name: Run regression test
           command: python do.py test-suites
           no_output_timeout: 1800
