--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
           command: apt-get update -qy
       - run:
           name: Set time zone
-          command: ln -fs /usr/share/zoneinfo/Europe/Paris /etc/localtime 
+          command: ln -fs /usr/share/zoneinfo/Europe/Paris /etc/localtime
       - run:
           name: Install python-dev with apt-get
           command: DEBIAN_FRONTEND=noninteractive apt-get install -y python3-dev
@@ -31,6 +31,9 @@ jobs:
       - run:
           name: Install cargo with apt-get
           command: apt-get install -y rust-all
+      - run:
+          name: Install libclang for bindgen with apt-get
+          command: apt-get install -y libclang-dev
       - run:
           name: Install bindgen with cargo
           command: cargo install bindgen
