update of Gemfile and config files to work again with moved/renamed "just-the-docs" template and Ruby 3.x

--- a/_config_local.yml
+++ b/_config_local.yml
@@ -7,7 +7,7 @@ description: >-
 github_repo: "numbbo/coco"
 
 # Build settings
-remote_theme: just-the-docs/just-the-docs
+theme: just-the-docs
 # search_enabled: false # Use this to disable search
 
 plugins:
