added list of bbob functions with links to their definitions and visualizations, minor improvements here and there (additional links for navigation for example)

--- a/_config.yml
+++ b/_config.yml
@@ -26,6 +26,8 @@ exclude:
   - README.md
 
 aux_links:
+  "COCO code":
+    - "https://github.com/numbbo/coco"
   "data archive":
     - "http://numbbo.github.io/data-archive/"
   "postprocessed data":
