Trying to fix the yaml (Niko's idea)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,5 +1,10 @@
 version: 2
 
+on:
+  push:
+    branches-ignore:
+      - 'gh-pages'
+
 jobs:
 
   test_ubuntu_rolling_python3:
@@ -129,7 +134,4 @@ workflows:
   test-matrix:
     jobs:
       - test_ubuntu_rolling_python3
-    branches:
-      ignore:
-        - gh-pages
 
